--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/pg": "^8.11.0",
     "fastify": "^4.26.1",
+    "ioredis": "^5.3.2",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
